Broker:
- Fix session expiry with very large expiry intervals. Closes #1525.
- Check ACL patterns for validity when loading. Closes #1539.
- Use presence of password file as indicator for whether username checks
  should take place, not whether usernames are defined in the password file.
  Closes #1545.
- Strip whitespace from end of config file string options. Closes #1566.


1.6.8 - 20191128
================

Broker:
- Various fixes for `allow_zero_length_clientid` config, where this option was
  not being set correctly. Closes #1429.
- Fix incorrect memory tracking causing problems with memory_limit option.
  Closes #1437.
- Fix subscription topics being limited to 200 characters instead of 200
  hierarchy levels. Closes #1441.
- Only a single CRL could be loaded at once. This has been fixed.
  Closes #1442.
- Fix problems with reloading config when `per_listener_settings` was true.
  Closes #1459.
- Fix retained messages with an expiry interval not being expired after being
  restored from persistence. Closes #1464.
- Fix messages with an expiry interval being sent without an expiry interval
  property just before they were expired. Closes #1464.
- Fix TLS Websockets clients not receiving messages after taking over a
  previous connection. Closes #1489.
- Fix MQTT 3.1.1 clients using clean session false, or MQTT 5.0 clients using
  session-expiry-interval set to infinity never expiring, even when the global
  `persistent_client_expiration` option was set. Closes #1494.

Client library:
- Fix publish properties not being passed to on_message_v5 callback for QoS 2
  messages. Closes #1432.
- Fix documentation issues in mosquitto.h. Closes #1478.
- Document `mosquitto_connect_srv()`. Closes #1499.

Clients:
- Fix duplicate cfg definition in rr_client. Closes #1453.
- Fix `mosquitto_pub -l` hang when stdin stream ends. Closes #1448.
- Fix `mosquitto_pub -l` not sending the final line of stdin if it does not
  end with a new line. Closes #1473.